--- a/service.yml
+++ b/service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: springboot-ms-gcp-service
+  name: springboot-rest-gcp
   labels:
-    name: springboot-ms-gcp-service
+    name: springboot-rest-gcp
 spec:
   ports:
     - port: 8080
       targetPort: 8080
       protocol: TCP
   selector:
-    app: springboot-ms-gcp
+    app: springboot-rest-gcp
   type: LoadBalancer
