--- a/deployment.yml
+++ b/deployment.yml
@@ -4,6 +4,8 @@ metadata:
   name: springboot-rest-gcp
 spec:
   replicas: 3
+  stratergy:
+    type: Recreate
   template:
     metadata:
       labels:
